[gd_scene load_steps=4 format=3 uid="uid://vsu1s8qjdne8"]

[ext_resource type="Theme" uid="uid://dk5iv042psfw" path="res://assets/themes/Default.tres" id="1_gsr3f"]
[ext_resource type="Script" path="res://src/indoor_preparation/screen_displays/shared/character_detail/dynamic_info_panel.gd" id="1_qed3w"]
[ext_resource type="Texture2D" uid="uid://8icadmy2cp3f" path="res://assets/art/upgrade_icon_placeholder.png" id="3_aofsp"]

[node name="DynamicInfoPanel" type="PanelContainer"]
anchors_preset = -1
anchor_left = 0.31
anchor_top = 0.4
anchor_right = 0.8
anchor_bottom = 0.98
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_gsr3f")
script = ExtResource("1_qed3w")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Header" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Details"
horizontal_alignment = 1

[node name="Panel" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="NoInformation" type="Label" parent="MarginContainer/VBoxContainer/Panel/MarginContainer"]
layout_mode = 2
text = "Hover or Select Upgrades
For Detailed Information"
horizontal_alignment = 1

[node name="UpgradeDetailsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/Panel/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeDetailsContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="UpgradeIcon1" type="TextureRect" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeDetailsContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_aofsp")
stretch_mode = 3

[node name="UpgradeName" type="Label" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeDetailsContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Study"

[node name="UpgradeIcon2" type="TextureRect" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeDetailsContainer/HBoxContainer"]
layout_mode = 2
texture = ExtResource("3_aofsp")
stretch_mode = 3

[node name="UpgradeDescription" type="Label" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeDetailsContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Wit sharpened through diligence."
horizontal_alignment = 1

[node name="VisualSummary" type="RichTextLabel" parent="MarginContainer/VBoxContainer/Panel/MarginContainer/UpgradeDetailsContainer"]
layout_mode = 2
size_flags_vertical = 6
bbcode_enabled = true
text = "[center]Add:
[img=30%]res://assets/art/HEAL_icon_64x64.png[/img]2  [img=30%]res://assets/art/HEAL_icon_64x64.png[/img]2
Remove:
[img=30%]res://assets/art/ATTACK_icon_64x64.png[/img]1"
fit_content = true

[node name="OptionalCostInfo" type="RichTextLabel" parent="MarginContainer/VBoxContainer/Panel/MarginContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 8
bbcode_enabled = true
text = "[right]Cost: [img=15%]res://assets/art/ATTACK_icon_64x64.png[/img]500"
fit_content = true
scroll_active = false
shortcut_keys_enabled = false
